@@ -1,5 +1,0 @@
-
-
-cd separate_users
-django-admin.py makemessages -l en
-cd ..
