@@ -1,8 +1,8 @@
 """URLs to run the tests."""
-from django.conf.urls import include, url
+from django.conf.urls import url
 from django.contrib import admin
 
 
 urlpatterns = [
-    url(r'^admin/', include(admin.site.urls)),
+    url(r'^admin/', admin.site.urls),
 ]
