@@ -24,7 +24,7 @@ setup(
     packages=find_packages(),
     install_requires=(
         # 'Django>=1.3,<1.5',  # no need to limit while in development
-        'Django>=1.8',
+        'Django>=1.11',
     ),
     include_package_data=True,
     zip_safe=False,
