@@ -1,35 +1,21 @@
-
 [tox]
-envlist = django18, django19, django110, django111
+envlist = py{27,36}-django{111,20}
 
 [testenv]
 commands = python manage.py test
 setenv =
     DJANGO_SETTINGS_MODULE=separate_users.tests.settings
     PYTHONPATH={toxinidir}
-
-[base]
 deps =
+    django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
     coverage
     django-coverage
-    flake8
 
-[testenv:django18]
+[testenv:py27-django20]
+whitelist_externals = echo
 deps =
-    {[base]deps}
-    django>=1.8, <1.9
+commands= echo "no django 2.0 on python 2.7!"
 
-[testenv:django19]
-deps =
-    {[base]deps}
-    django>=1.9, <1.10
-
-[testenv:django110]
-deps =
-    {[base]deps}
-    django>=1.10, <1.11
-
-[testenv:django111]
-deps =
-    {[base]deps}
-    django>=1.11, <1.12
+[testenv:flake8]
+commands = flake8
