@@ -1,4 +1,6 @@
 
+
 cd separate_users
+django-admin.py makemessages -l en -l de -l fr
 django-admin.py compilemessages
 cd ..
